--- a/NewsStudyRostelecom/main/templates/main/contacts.html
+++ b/NewsStudyRostelecom/main/templates/main/contacts.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
+{% extends 'main/base_template.html' %}
+{% load static %}
 {% load bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
+{% block title %} Контакты {% endblock %}
 
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Контакты</title>
 
-</head>
-<body>
+{% block content %}
+
 <div class="row">
     <div class="col">
         <h1> Контакты </h1>
@@ -35,5 +31,4 @@
     </div>
 
 </div>
-</body>
-</html>
+{% endblock %}
