--- a/NewsStudyRostelecom/main/templates/main/index.html
+++ b/NewsStudyRostelecom/main/templates/main/index.html
@@ -1,119 +1,24 @@
-<!DOCTYPE html>
+{% extends 'main/base_template.html' %}
 {% load static %}
 {% load bootstrap5 %}
+{% block title %} Главная страница {% endblock %}
 
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title> {{ title }} </title>
-    <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
-    <script src="https://kit.fontawesome.com/a97047fead.js" crossorigin="anonymous"></script>
-
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
-</head>
-<body>
-
-    <div class="content">
-   <!-- <h1> {{ Header1 }} </h1>
-    <p> value = {{ value|add:"5" }} </p>
-
-
-    {% if value > 0 %}
-        <h3> Переменная больше нуля</h3>
-    {% else %}
-        <h3> Переменная не больше нуля</h3>
-    {% endif %}
-
-    <li>
-    {% for n in numbers %}
-        <ul>{{ n.title }}, {{ n.date }}</ul>
-    {% endfor %}
-    </li>-->
-
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-2" style="background: #7700ff">
-                    <h1> Меню </h1>
-                    <li>
-                        <ul><i class="fa-solid fa-home"></i> <a href=""> Главная страница </a></ul>
-                        <ul><i class="fa-sharp fa-regular fa-comment"></i> <a href="about">  О нас </a></ul>
-                        <ul><i class="fa-regular fa-envelope"></i> <a href="contacts">  Контакты </a></ul>
-                        <ul><i class="fa-solid fa-tv"></i> <a href="content">  Контент </a></ul>
-
-                    </li>
-                </div>
-                <div class="col-8">
-
-<!--                    <form method="post">-->
-<!--                        {% csrf_token %}-->
-<!--                        <h3> Выберите цвет: </h3>-->
-<!--                        {% for color in colors %}-->
-<!--                            <input type="radio" id="{{ color }}" name="colors" value="{{ forloop.counter }}">-->
-<!--                            <label for="{{ color }}"> {{ color }} </label><br>-->
-<!--                        {% endfor %}-->
-<!--                        <br>-->
-<!--                        <input class="btn-primary" type="submit" value="Сохранить" >-->
-<!--                    </form>-->
-                    <br>
-
-
-                    <form method="post">
-                        {% csrf_token %}
-                        <p> Введите название товара: <br>
-                        <input type="text" name="title" ></p>
-
-                        <p> Укажите цену товара: <br>
-                        <input type="text" name="price" ></p>
-
-                        <p> Введите количество товара: <br>
-                        <input type="number" name="quantity" min="1" max="100"></p>
-                        <br>
-                        <input class="btn-primary" type="submit" value="Создать товар" >
-                    </form>
-
-
-                    <table width="500px;" border="1px;">
-                        <tr>
-                            <th> Товар </th>
-                            <th> Цена </th>
-                            <th> Кол-во </th>
-                            <th> Итого </th>
-                        </tr>
-                        <tr>
-                            <td> {{ water.title }} </td>
-                            <td> {{ water.price }} </td>
-                            <td> {{ water.quantity }} </td>
-                            <td> {{ water.amount }} </td>
-                        </tr>
-                        <tr>
-                            <td> {{ chocolate.title }} </td>
-                            <td> {{ chocolate.price }} </td>
-                            <td> {{ chocolate.quantity }} </td>
-                            <td> {{ chocolate.amount }} </td>
-                        </tr>
-                    </table>
-
-                    <div class="news1">
-                        <h2> Новость 1 </h2>
-                        <p> текст новости 1 </p>
-                    </div>
-
-                    <div class="news1">
-                        <h2> Новость 2 </h2>
-                        <p> текст новости 2 </p>
-
-                        <h2> Новость 3 </h2>
-                        <p> текст новости 3 </p>
-                    </div>
-
-                </div>
+{% block content %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="text-center" style="margin-top:30px;">
+                    <h1 > Первая страница</h1>
             </div>
 
+             <div class="single_news">
+                <div class="p-4 p-md-5 text-white rounded bg-dark" >
+                        <div class="col-md-6 px-0">
+                          <h1 class="display-4 fst-italic">Последняя новость</h1>
+                          <p class="lead my-3">Начало новости, для продолжения чтения нужно пройти по ссылки ниже</p>
+                          <p class="lead mb-0"><a href="news/detail" class="text-white fw-bold">Полный текст...</a></p>
+                        </div>
+                  </div>
+            </div>
         </div>
     </div>
-
-
-</body>
-</html>
+{% endblock %}
