--- a/NewsStudyRostelecom/main/templates/main/index.html
+++ b/NewsStudyRostelecom/main/templates/main/index.html
@@ -15,7 +15,7 @@
                         <div class="col-md-6 px-0">
                           <h1 class="display-4 fst-italic">Последняя новость</h1>
                           <p class="lead my-3">Начало новости, для продолжения чтения нужно пройти по ссылки ниже</p>
-                          <p class="lead mb-0"><a href="news/detail" class="text-white fw-bold">Полный текст...</a></p>
+                          <p class="lead mb-0"><a href="news/" class="text-white fw-bold">Полный текст...</a></p>
                         </div>
                   </div>
             </div>
