--- a/NewsStudyRostelecom/main/templates/main/news.html
+++ b/NewsStudyRostelecom/main/templates/main/news.html
@@ -1,12 +1,14 @@
 {% extends 'main/base_template.html' %}
 {% load static %}
 {% load bootstrap5 %}
-{% block title %} Новостная страница {% endblock %}
+{% block title %} Список новостей {% endblock %}
 
 {% block content %}
     <div class="row">
         <div class="text-center" style="..">
-            <h1> Главная новость дня </h1>
+            <h1> Новость 1 </h1>
+            <h1> Новость 2 </h1>
+            <h1> Новость 3 </h1>
         </div>
 
 
