--- a/NewsStudyRostelecom/news/templates/news/index.html
+++ b/NewsStudyRostelecom/news/templates/news/index.html
@@ -7,6 +7,8 @@
         <div class="row">
             <div class="text-center" style="margin-top:30px;">
                     <h1 >Тут будет список с новостями</h1>
+                    <br>
+                    <h1 >Тут будет список с новостями</h1>
             </div>
 
 
