--- a/NewsStudyRostelecom/main/templates/main/base_template.html
+++ b/NewsStudyRostelecom/main/templates/main/base_template.html
@@ -33,7 +33,7 @@
                                         <div class="col-md-6 px-0">
                                           <h1 class="display-4 fst-italic">Последняя новость</h1>
                                           <p class="lead my-3">Заголовок новости, для продолжения чтения нужно пройти по ссылке ниже</p>
-                                          <p class="lead mb-0"><a href="#" class="text-white fw-bold">Полный текст...</a></p>
+                                          <p class="lead mb-0"><a href="{% url 'news_detail' %}" class="text-white fw-bold">Полный текст...</a></p>
                                         </div>
                                       </div>
                                     </div>
