--- a/NewsStudyRostelecom/main/templates/main/index.html
+++ b/NewsStudyRostelecom/main/templates/main/index.html
@@ -11,11 +11,13 @@
             </div>
 
              <div class="single_news">
-                <div class="p-4 p-md-5 text-white rounded bg-dark" >
+                <div class="p-4 p-md-5 text-black rounded bg-info" >
                         <div class="col-md-6 px-0">
                           <h1 class="display-4 fst-italic">Последняя новость</h1>
                           <p class="lead my-3">Начало новости, для продолжения чтения нужно пройти по ссылки ниже</p>
-                          <p class="lead mb-0"><a href="news/" class="text-white fw-bold">Полный текст...</a></p>
+                          <p class="lead mb-0">
+                              <a href="news_detail/" class="text-black fw-bold">Полный текст...</a>
+                          </p>
                         </div>
                   </div>
             </div>
