--- a/NewsStudyRostelecom/news/templates/news/news.html
+++ b/NewsStudyRostelecom/news/templates/news/news.html
@@ -1,4 +1,4 @@
-{% extends 'main/base_temlate.html' %}
+{% extends 'main/base_template.html' %}
 {% load static %}
 {% load bootstrap5 %}
 {% block title %} Новостная страница {% endblock %}
