Добавлена дебаг панель.

--- a/NewsStudyRostelecom/main/templates/main/base_template.html
+++ b/NewsStudyRostelecom/main/templates/main/base_template.html
@@ -16,8 +16,10 @@
 </head>
 <body>
             <div class="row">
-                    <div class="col-3">
-                        {% include 'main/sidebar.html' %}
+                    <div class="col-4">
+                        <div class="sticky-top">
+                            {% include 'main/sidebar.html' %}
+                        </div>
                     </div>
 
 
