--- a/NewsStudyRostelecom/news/templates/news/index.html
+++ b/NewsStudyRostelecom/news/templates/news/index.html
@@ -8,6 +8,27 @@
     <div class="text-center" style="margin-top:30px;">
         <h1>Вся погода</h1>
     </div>
+    <div class="content_center">
+        <h6> Фильтр по автору: </h6>
+        <div class="form-group col-8">
+            <form method="post">
+                {% csrf_token %}
+                <div class="input-group">
+                    <select class="form-select" name="author_filter" style="width:40%">
+                        <option value="0">Все авторы</option>
+                        {% for author in author_list %}
+                            <option value="{{ author.id }}" {% if selected == author.id %} selected {% endif %}> {{ author.username }}</option>
+                        {% endfor %}
+                    </select>
+                    <span class="input-group-btn">
+                        <input type="submit" class="btn btn-success" value="Выбрать" style="margin: 0 15px">
+                    </span>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
     {% for article in articles %}
     <div class="single_news">
         <div class="p-4 p-md-5 text-black rounded bg-info">
@@ -15,8 +36,8 @@
                 <h1 class="display-4 fst-italic"> {{ article.title }}</h1>
                 <p class="lead my-3">{{ article.date }} {{ article.anouncement }}</p>
                 <p class="lead my-3">передал: {{ article.author }} </p>
-                <p class="lead mb-0"><a href="{{ article.get_absolute_url }}" class="text-black fw-bold">Полный
-                    текст...</a></p>
+                <p class="lead mb-0"><a href="{{ article.get_absolute_url }}" class="text-black fw-bold">Полное
+                    сообщение...</a></p>
             </div>
         </div>
     </div>
