подготовлен список тэгов для фильтра.

--- a/NewsStudyRostelecom/news/templates/news/index.html
+++ b/NewsStudyRostelecom/news/templates/news/index.html
@@ -17,7 +17,7 @@
                     <select class="form-select" name="author_filter" style="width:40%">
                         <option value="0">Все авторы</option>
                         {% for author in author_list %}
-                            <option value="{{ author.id }}" {% if selected == author.id %} selected {% endif %}> {{ author.username }}</option>
+                            <option value="{{ author.id }}" {% if selected_author == author.id %} selected_author {% endif %}> {{ author.username }}</option>
                         {% endfor %}
                     </select>
                     <span class="input-group-btn">
