Добавлена страница создания сообщения

--- a/NewsStudyRostelecom/main/templates/main/sidebar.html
+++ b/NewsStudyRostelecom/main/templates/main/sidebar.html
@@ -24,7 +24,7 @@
                   </a>
               </li>
               <li class="nav-item">
-                  <a href="{% url 'news_index' %}" {% if request.path == '/news/show' %} class="link-active" aria-current="page" {% endif %}>
+                  <a href="{% url 'news_index' %}" {% if request.path == '/news/all_news' %} class="link-active" aria-current="page" {% endif %}>
                         <i class="fa-solid fa-tv menu-icon {% if request.resolver_match.view_name  == '/news_index/' %} link-active {% endif %}"></i>
                         <div class="d-none d-lg-block"> Все новости</div>
                   </a>
