--- a/NewsStudyRostelecom/news/templates/news/news_detail.html
+++ b/NewsStudyRostelecom/news/templates/news/news_detail.html
@@ -1,10 +1,25 @@
 {% extends 'main/base_template.html' %}
 {% load static %}
 {% load bootstrap5 %}
+{% bootstrap_javascript %}
 
 {% block title %} {{ article.title }} {{ article.date }}{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
+
     <div class="row">
             <div class="text-center" style="margin-top:30px;">
                     <h1 >{{ article.title }} {{ article.date }}</h1>
@@ -12,7 +27,35 @@
 
                  <div class="single_news">
                     <div class="p-4 p-md-5 text-black rounded bg-info" >
-                            <div class="col-md-6 px-0">
+                            <div class="col-md-12 px-0">
+                                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+
+<!--                                    <ol class="carousel-indicators">-->
+<!--                                        <li data-target="#carouselExampleIndicators" data-slide-to="0"-->
+<!--                                            class="active"></li>-->
+<!--                                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+<!--                                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+<!--                                    </ol>-->
+                                    <div class="carousel-inner">
+                                        {% for image in images %}
+                                            <div class="carousel-item {% if forloop.counter == 1 %} active{% endif %}">
+                                                <img class="d-block w-100" src="{{ image.image.url }}" alt="image.title">
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                                       data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                                       data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+
+
 
                               <p class="lead my-3">{{ article.anouncement }}</p>
                               <p class="lead mb-0" class="fw-bold" >{{ article.text }}</p>
