Добавлены сообщения о регистрации.

--- a/NewsStudyRostelecom/main/templates/main/sidebar.html
+++ b/NewsStudyRostelecom/main/templates/main/sidebar.html
@@ -58,11 +58,15 @@
 
        </ul>
     </hr>
+
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 </aside>
 
 
 
-
-
-</body>
-</html>
