Добавлена иконка пользователя.

--- a/NewsStudyRostelecom/main/templates/main/sidebar.html
+++ b/NewsStudyRostelecom/main/templates/main/sidebar.html
@@ -58,6 +58,15 @@
 
        </ul>
     </hr>
+    <br>
+    <div class="dropdown1 flex-column mb-auto">
+        <button class="btn btn-primary dropdown-toggle col-12" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false" style="background:#212529;">
+            <img src="{{ request.user.account.account_image.url }}" alt="" width="25" height="25"
+                 class="rounded-circle me-2">
+            <div class="d-none d-lg-block "> {{ request.user.username }}</div>
+        </button>
+    </div>
 
     {% if messages %}
         {% for message in messages %}
